--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Crud koa",
     "main": "index.js",
     "scripts": {
-        "build": "babel index.js -d dist",
+        "lint": "eslint 'src/**/*.{js,jsx}'",
+        "build": "npm run lint && babel src/ -d dist/",
         "start": "node ./dist/index.js",
         "nodemon": "nodemon --exec babel-node index.js"
     },
@@ -24,6 +25,7 @@
         "@babel/core": "^7.23.2",
         "@babel/node": "^7.22.19",
         "@babel/preset-env": "^7.23.2",
+        "eslint": "^8.51.0",
         "prettier": "3.0.3"
     }
 }
