--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "lint": "eslint 'src/**/*.{js,jsx}'",
         "build": "npm run lint && babel src/ -d dist/",
-        "start": "node ./dist/index.js",
+        "build:wp": "npm run lint && webpack --mode production",
+        "start": "node ./dist/bundle.js",
         "nodemon": "nodemon --exec babel-node index.js"
     },
     "keywords": [
@@ -18,14 +19,21 @@
     "dependencies": {
         "@koa/router": "^11.0.2",
         "koa": "^2.14.2",
-        "nodemon": "^3.0.1"
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.23.0",
         "@babel/core": "^7.23.2",
         "@babel/node": "^7.22.19",
         "@babel/preset-env": "^7.23.2",
+        "babel-loader": "^9.1.3",
         "eslint": "^8.51.0",
-        "prettier": "3.0.3"
+        "eslint-plugin-node": "^11.1.0",
+        "nodemon": "^3.0.1",
+        "prettier": "3.0.3",
+        "webpack": "^5.89.0",
+        "webpack-bundle-analyzer": "^4.9.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-node-externals": "^3.0.0"
     }
 }
